# zeroclaw

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
scripts/: pre-commit
src/: config.rs  cpu.rs  disk.rs  display.rs  gpu_metal.rs  gpu_nvidia.rs  main.rs  mcp.rs  mem.rs  net.rs  proc.rs  sysinfo.rs  types.rs
